# GO_Kasir/docs/swagger.json
@@ -1677,9 +1677,6 @@
                 "barang_id": {
                     "type": "integer"
                 },
-                "discount": {
-                    "type": "number"
-                },
                 "quantity": {
                     "type": "integer"
                 },
@@ -1736,9 +1733,6 @@
                 },
                 "id_Member": {
                     "type": "string"
-                },
-                "nominal_pembayaran": {
-                    "type": "number"
                 },
                 "total_price": {
                     "type": "number"
