# GO_Kasir/internal/request/RequestPembelianBarang.go
@@ -5,5 +5,4 @@ type PembelianBarangRequest struct {
 	BarangID      uint    `json:"barang_id"`
 	Quantity      uint    `json:"quantity"`
 	SubTotalHarga float64 `json:"sub_total_harga"`
-	Discount      float64 `json:"discount"`
 }
