# GO_Kasir/internal/request/RequestTransaksi.go
@@ -1,10 +1,10 @@
 package request
 
 type RequestBiayaTransaksi struct {
-	TotalPrice        float64 `json:"total_price"`
-	NominalPembayaran float64 `json:"nominal_pembayaran"`
-	CodeVoucer        string  `json:"code_voucer"`
-	IdMember          string  `json:"id_Member"`
+	TotalPrice float64 `json:"total_price"`
+}
+type RequestPPNTransaksi struct {
+	TotalPrice string `json:"total_price"`
 }
 
 type RequestTransaksi struct {
@@ -15,5 +15,5 @@ type RequestTransaksi struct {
 	KaryawanID        float64 `json:"karyawan_id"`
 	CodeVoucer        string  `json:"code_voucer"`
 	Point             uint    `json:"point"`
-	MemberID          int     `json:"member_id"`
+	MemberID          string  `json:"member_id"`
 }
